got some overloaded stuff going

--- a/src/graveyard/Makefile
+++ b/src/graveyard/Makefile
@@ -3,17 +3,17 @@ CC=g++ -std=c++2a
 CFLAGS=-O2 -Wall
 INC = -I. -I../tools
 
-TABLETYPE = graveyard
+TABLETYPES = graveyard ordered
 benches = tabletest querystats queuestats xtester rebuildstats \
 	  floatstats loadbench 
 
 DEPS = $(wildcard ../tools/primes.*) $(wildcard *.h)
-SRC = $(TABLETYPE).c
-OBJ = obj/$(TABLETYPE).o obj/primes.o
+SRC = $(TABLETYPES:=.cc)
+OBJ = $(TABLETYPES:%=obj/%.o) obj/primes.o
 
 all: tests
 
-obj/%.o: %.c $(DEPS) 
+obj/%.o: %.cc $(DEPS) 
 	mkdir -p obj
 	@echo $@
 	$(CC) -c -o $@ $< $(CFLAGS) $(INC)
@@ -27,6 +27,10 @@ $(benches): %: obj/%.o $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(INC)
 
 tests: $(benches)
+
+test:
+	@echo $(SRC)
+	@echo $(OBJ)
 
 clean :
 	rm obj/* $(benches)
