--- a/src/Makefile
+++ b/src/Makefile
@@ -5,9 +5,10 @@ INC = -I. -Itesters -Ihashtables -Itools
 
 tabletypes = graveyard_aos ordered_aos linear_aos graveyard_soa \
 	     ordered_soa linear_soa
-testers = querytester rebuildtester loadtester floattester one_rb_querytester
+testers = amorttester querytester rebuildtester loadtester floattester \
+	  one_rb_querytester
 benches = tabletest querystats queuestats xtester rebuildstats \
-	  floatstats loadstats
+	  floatstats loadstats amortstats
 
 TABLEDEPS = $(wildcard tools/*) $(wildcard hashtables/*.h)
 TESTERDEPS = $(wildcard tools/*) $(wildcard testers/*.hpp)
